--- a/src/styles.css
+++ b/src/styles.css
@@ -94,21 +94,42 @@ App > div > div {
 
 .prettyPrint {
   border: 1px solid teal;
-  width: 80%;
   margin: 0 auto;
 }
 
-.prettyPrint pre {
+.prettyPrint main {
   margin: 0;
-  background-color: teal;
+  background-color: rgb(245 207 174 / 80%);
   padding: 1rem;
-  font-weight: 800;
   cursor: help;
   text-align: left;
 }
 
-.prettyPrint pre.In {
+.prettyPrint main.In {
   animation: animate 700ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.prettyPrint table,
+.prettyPrint table * {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.prettyPrint table th {
+  background-color: rgb(245 207 174 / 80%);
+  font-weight: 800;
+  vertical-align: top;
+}
+
+.prettyPrint table td {
+  background-color: white;
+  vertical-align: top;
+}
+
+.prettyPrint table td > table {
+  background-color: transparent;
+  vertical-align: top;
 }
 
 @keyframes animate {
@@ -116,6 +137,6 @@ App > div > div {
     transform: perspective(600px) rotate3d(0, 0, 0, 0) scale(1);
   }
   to {
-    transform: perspective(600px) rotate3d(1, 0, 0, 360deg) scale(1.3);
+    transform: perspective(600px) rotate3d(1, 0, 0, 360deg) scale(1.2);
   }
 }
